@@ -1,3 +1,9 @@
+1999-01-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* CompleteProbeMap.m, CompleteVarMap.m, CustomProbeMap.m,
+	DefaultProbeMap.m, Probe.m, ProbeMap.m, VarProbe.m: Use raiseEvent()
+	instead of raiseEvent: and WarningMessage instead of Warning.
+
 1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>
 
 	* Makefile.am (CURRENT): Bump.
